# hello_cmake

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/hello/: CMakeLists.txt  hello.cpp
step1/: CMakeLists.txt  step1.cpp  step1_config.h.in
step2/: CMakeLists.txt  step2.cpp  step2_config.h.in
step2/math_functions/: CMakeLists.txt
step3/: CMakeLists.txt  step3.cpp  step3_config.h.in
step3/math_functions/: CMakeLists.txt
step4/: CMakeLists.txt  step4.cpp  step4_config.h.in
step4/math_functions/: CMakeLists.txt  math_functions.cpp  math_functions.h
